# ChangeLog for app-portage/squashed-portage
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
  squashed-portage-0.18-r1.ebuild:
  Dropped arm due to missing kwd on aufs-utils; stable for x86 and amd64

*squashed-portage-0.18-r1 (18 Oct 2014)

  18 Oct 2014; Johann Schmitz <johann@gentoo.org>
  +squashed-portage-0.18-r1.ebuild, -squashed-portage-0.18.ebuild:
  Dropped cacert condition on ca-certificates

  05 Oct 2014; Johann Schmitz <ercpe@gentoo.org> squashed-portage-0.18.ebuild,
  squashed-portage-9999.ebuild:
  Updated HOMEPAGE of squashed-portage

  25 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.18.ebuild,
  squashed-portage-9999.ebuild:
  Drop unnecessary dep

  25 Sep 2014; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.16.ebuild,
  -squashed-portage-0.17.ebuild, squashed-portage-0.18.ebuild,
  squashed-portage-9999.ebuild:
  Fix portage dep version

*squashed-portage-0.18 (25 Sep 2014)

  25 Sep 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.18.ebuild:
  Version BUmp

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Fix script installation part II

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Fix script installation

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Fix blocker for openrc

*squashed-portage-0.17 (16 Sep 2014)

  16 Sep 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Version Bump

  22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix broken live version

  22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.16.ebuild,
  squashed-portage-9999.ebuild:
  Equalize versions
