@@ -1,1 +1,2 @@
 DIST squashed-portage-0.18.tar.xz 5712 SHA256 b0114046aacfebdca7ab348abcb15f5ab598a3ef34d62cadf52f05ad72e3cddc SHA512 5dbc69c0c0008d051bb0cb805db071eaaf5969359fb40a03fc3f1c103a360b04fadb3b391dafc9537face41862eaff5fa9fcd0a57cc9ce552fb78d2dfe6d17b7 WHIRLPOOL 275f541ae9428a6d5784a5f48e1ba9df93bed4c9cfa4f8b94fd529558124c8aede2339d7b3c133bffccc3b95125e880afc04c5753aec5426f16e48bbe1a20e8d
+DIST squashed-portage-0.19.tar.xz 5712 SHA256 25fa03100844082a3f45fa4af871de22762fc45a8821ccdd221f2739d4c50a8e SHA512 2ba39f6195b47b9e24862fae670cf88f54b6f09a0d3b40cb040cf484670368987b3c91c825ff035453ba8e288d5bc93571684aaee07163305d0eb92d45d7edca WHIRLPOOL 55cd8dc34c686e79d89501003381c5c5cca3605d5f5ba971f306211d911631d85b35fb7c890a32146fb0d5743ce4d8b71e6ae6be09c3fe23e2330de4f3b17bc9
