@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashed-portage-0.19 (10 Nov 2014)
+
+  10 Nov 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.19.ebuild,
+  squashed-portage-9999.ebuild:
+  Version Bump
+
   04 Nov 2014; Johann Schmitz <ercpe@gentoo.org>
   squashed-portage-0.18-r1.ebuild:
   Dropped arm due to missing kwd on aufs-utils; stable for x86 and amd64
